--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
+
+pre {
+  @apply static rounded-xl m-0 !important;
+}
+
+/* h1{
+  @apply text-3xl font-bold !important;
+} */
+
 @tailwind components;
 @tailwind utilities;
